State: A Component's Memory Challenge 2 of 4: Fix stuck form inputs
problem

--- a/3. Adding Interactivity/2. State: A Component's Memory/src/styles.css
+++ b/3. Adding Interactivity/2. State: A Component's Memory/src/styles.css
@@ -46,16 +46,4 @@ ul {
   padding-left: 20px;
 }
 
-button { display: block; margin-bottom: 10px; }
-.Page > * {
-  float: left;
-  width: 50%;
-  padding: 10px;
-}
-h2 { margin-top: 10px; margin-bottom: 0; }
-h3 {
-  margin-top: 5px;
-  font-weight: normal;
-  font-size: 100%;
-}
-img { width: 120px; height: 120px; }
+h1 { margin-top: 10px; }
